--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.android.support:support-v4:26.1.0'
     compile group: 'com.j256.ormlite', name: 'ormlite-android', version: '4.45'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
